[tool.poetry]
name = "housing"
version = "0.1.0"
description = "NYC rent prediction app."
authors = ["azhadsyed <azhadsyed17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "*"
mysql-connector-python = "^8.0.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
