[tool.poetry]
name = "housing"
version = "0.1.0"
description = "NYC rent prediction app."
authors = ["azhadsyed <azhadsyed17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "*"
python-craigslist = "^1.0.11"
tqdm = "^4.54.0"
numpy = "^1.19.4"
pymongo = "^3.11.2"
docopt = "^0.6.2"
statistics = "^1.0.3"
Flask = "^1.1.2"
scikit-learn = "^0.23.2"
joblib = "^1.0.0"
treeinterpreter = "^0.2.3"
geopy = "^2.1.0"
shap = "^0.38.1"
WTForms = "^2.3.3"
gunicorn = "^20.0.4"
boto3 = "^1.17.6"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.4", allow-prereleases = true}
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
nbformat = "^5.1.2"
plotly = "^4.14.3"
mock = "^4.0.3"
pytest = "^6.2.1"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
